# apidsl

./: .gitignore  .travis.yml  Dockerfile  Makefile  Procfile  README.md  _tags  apiAst.ml  apiCodegen.ml  apiFold.ml  apiFoldMap.ml  apiLexer.mll  apiMap.ml  apiParser.mly  apiPasses.ml  apidsl.opam  apigen.ml  dune  dune-fs  dune-project  enumApply.ml  enumNamespaceApply.ml  errorOK.ml  eventFunction.ml  extractSymbols.ml  namespaceApply.ml  namespaceApplyEvents.ml  replaceDecl.ml  scopeBinding.ml  symbolTable.ml  thisParams.ml  tox.h  toxav.h  travis-coveralls.sh
.github/: settings.yml
.github/workflows/: ci.yaml
js/: apidsl-support.js  apigen.ml  dune  index.html
src/: .gitignore  Makefile  _oasis  _tags  apiAst.ml  apiCodegen.ml  apiFold.ml  apiFoldMap.ml  apiLexer.mll  apiMap.ml  apiParser.mly  apiPasses.ml  apigen.ml  arrayToPointer.ml  constFunction.ml  constants.ml  dune  enumApply.ml  enumBitmaskNONE.ml  enumBitmasks.ml  enumNamespaceApply.ml  errorEnums.ml  errorEnumsAddERR.ml  errorEnumsRename.ml  errorNULL.ml  errorOK.ml  eventApply.ml  eventCloneFunctionName.ml  eventComments.ml  eventFlatten.ml  eventFunction.ml  eventParams.ml  eventRename.ml  extractSymbols.ml  getSetFlatten.ml  getSetParams.ml  getSetRename.ml  getSetStruct.ml  haskellAst.ml  haskellCamelCase.ml  (+18 more)
src/tests/: arg_refs.exp.h  arg_refs.exp.hs  bad_prop_fun_decl.api.h  bad_prop_fun_decl.exp.api  (+31 more)
test/: dune-template
tests/: bitmask.exp  bitmask.h  class_number.exp  class_number.h  empty.exp  event.exp  event.h  this_type.exp  tox.exp  tox.h  toxav.exp
web/: apigen.ml  dune
(+39 files in other folders)
